--- a/views/playground/workflow-comments/test-02/tab_one.html.twig
+++ b/views/playground/workflow-comments/test-02/tab_one.html.twig
@@ -19,9 +19,16 @@
                         'icon': 'save'
                     },
                     {
-                        'label': 'Submit for approval',
-                        'href': 'index.html.twig',
-                        'icon': 'hand-o-right',
+                        'label': 'Approve',
+                        'href': '#workflow-approve',
+                        'data-toggle': 'modal',
+                        'icon': 'thumbs-o-up'
+                    },
+                    {
+                        'label': 'Reject',
+                        'href': '#workflow-reject',
+                        'data-toggle': 'modal',
+                        'icon': 'thumbs-o-down'
                     }
                 ],
                 [
@@ -62,16 +69,6 @@
 {%- endblock -%}
 
 {%- block actions_right -%}
-    <div data-toggle="tooltips" title="There are no new changes to approve">
-        {{
-            html.button({
-                'label': 'Submit for Approval',
-                'disabled': true,
-                'type': 'link',
-                'href': '#workflow-submit'
-            })
-        }}
-    </div>
     {{
         html.button({
             'label': 'Save',
@@ -81,13 +78,40 @@
 {%- endblock -%}
 
 {% block tab_content %}
-<style>
+    <style>
         [method="POST"] .form__group {
             background-color: #efefef;
             margin-bottom: 1px;
             padding: 5px;
         }
     </style>
+    {% if _get.note is defined and _get.note is not empty %}
+        {% set note = '<p class="panel--callout"><strong>Notes to reviewer</strong>: <q>' ~ _get.note ~ '</q></p>' %}
+    {% endif %}
+    {{
+        html.panel({
+            'title': 'This content is awaiting approval',
+            'body': '<p>Please review the content and choose to approve for publishing, or reject (with reason, such as to request changes).</p>
+            <p></p>As a reviewer you may make changes to this document before approving.</p>
+            <p class="panel--callout"><strong>Notes from author</strong>: <q>This is required for the new marketing push</q></p>',
+            'class': 'panel--info u-margin-top-none',
+            'actions': [
+                {
+                    'label': 'Approve',
+                    'class': 'btn--success',
+                    'data-toggle': 'modal',
+                    'href': '#workflow-approve'
+                },
+                {
+                    'label': 'Reject',
+                    'class': 'btn--danger',
+                    'data-toggle': 'modal',
+                    'href': '#workflow-reject'
+                }
+            ]
+        })
+    }}
+
     {{
         form.create()
     }}
@@ -149,16 +173,9 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
     {{
         form.end({
             'actions': [
-                form.submit({
-                    'class': 'btn--primary',
-                    'label': 'Save'
-                }),
                 html.button({
-                    'label': 'Submit for Approval',
-                    'data-toggle': 'modal',
-                    'type': 'link',
-                    'href': '#workflow-submit',
-                    'disabled': true
+                    'label': 'Save',
+                    'class': 'btn--primary'
                 }),
                 html.button({
                     'class': 'btn--naked',
@@ -169,5 +186,99 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
             ]
         })
     }}
+
+    <div id="workflow-approve" class="modal modal__large">
+        <div class="modal__dialog">
+            {{
+                form.create({
+                    'method': 'GET',
+                    'id': 'submit-approve',
+                    'name': 'submit-approve',
+                    'action': 'index_approve.html.twig'
+                })
+            }}
+            <div class="modal__content">
+                <div class="modal__header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h1 class="modal__title">Approve Content</h1>
+                </div>
+                <div class="modal__body">
+                    {{
+                        form.textarea({
+                            'label': 'Note to author (optional)',
+                            'id': 'note',
+                            'name': 'note',
+                            'class': 'form__group--full form__group--top form__group--flush u-margin-bottom-none',
+                            'rows': 5
+                        })
+                    }}
+                </div>
+                <div class="modal__footer">
+                    {{
+                        html.button({
+                            'class': 'btn--success',
+                            'label': 'Approve',
+                            'type': 'submit'
+                        })
+                    }}
+                    {{
+                        html.button({
+                            'class': 'btn--naked',
+                            'data-dismiss': 'modal',
+                            'label': 'Cancel'
+                        })
+                    }}
+                </div>
+            </div><!-- /.modal__content -->
+            {{ form.end() }}
+        </div><!-- /.modal__dialog -->
+    </div><!-- /.modal -->
+
+    <div id="workflow-reject" class="modal modal__large modal--danger">
+            <div class="modal__dialog">
+                {{
+                    form.create({
+                        'method': 'GET',
+                        'id': 'submit-reject',
+                        'name': 'submit-reject',
+                        'action': 'index_reject.html.twig'
+                    })
+                }}
+                <div class="modal__content">
+                    <div class="modal__header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h1 class="modal__title">Reject Content</h1>
+                    </div>
+                    <div class="modal__body">
+                        {{
+                            form.textarea({
+                                'label': 'Reasons for rejection (optional)',
+                                'id': 'note',
+                                'name': 'note',
+                                'class': 'form__group--full form__group--top form__group--flush u-margin-bottom-none',
+                                'rows': 5
+                            })
+                        }}
+                    </div>
+                    <div class="modal__footer">
+                        {{
+                            html.button({
+                                'class': 'btn--danger',
+                                'label': 'Reject',
+                                'type': 'submit'
+                            })
+                        }}
+                        {{
+                            html.button({
+                                'class': 'btn--naked',
+                                'data-dismiss': 'modal',
+                                'label': 'Cancel'
+                            })
+                        }}
+                    </div>
+                </div><!-- /.modal__content -->
+                {{ form.end() }}
+            </div><!-- /.modal__dialog -->
+        </div><!-- /.modal -->
 
 {% endblock %}
