--- a/views/playground/workflow-comments/test-01/index_two.html.twig
+++ b/views/playground/workflow-comments/test-01/index_two.html.twig
@@ -7,41 +7,47 @@
 
 {% block title %}{{ parent() }}{% endblock %}
 
-{% set heading = 'My Example Document' %}
+{% set heading = "My Example Document (Editor\'s View)" %}
 
 {%
     set nav_data = {
         "1": {
-            "label": "Test One",
-            "class": "",
-            "href": "/app/app.php/playground/workflow-comments-one/index.html.twig",
+            "label": "Test 01",
+            "class": "is-active",
+            "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
-            "label": "Test Two",
+            "label": "Test 02",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-two/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
-            "label": "Test Three",
-            "class": "is-active",
-            "href": "/app/app.php/playground/workflow-comments-three/index.html.twig",
+            "label": "Test 03",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
+            "icon": "folder"
+        },
+        "4": {
+            "label": "Test 04",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
             "icon": "folder"
         },
     }
 %}
 
-{% set tab_one %}
-    {% include 'playground/workflow-comments-three/tab_one.html.twig' %}
+{% set tab_two %}
+    {% include 'playground/workflow-comments/test-01/tab_two.html.twig' %}
 {% endset %}
 
 {%
     set tabs_content = [
         {
-          "id"    : "one",
+          "id"    : "two",
           "label" : "Content",
-          "src"   : tab_one,
+          "src"   : tab_two,
           "active": true
         }
     ]
