--- a/views/playground/workflow-comments/test-02/index_publish.html.twig
+++ b/views/playground/workflow-comments/test-02/index_publish.html.twig
@@ -7,33 +7,46 @@
 
 {% block title %}{{ parent() }}{% endblock %}
 
-{% set heading = 'My Example Document' %}
+{% set heading = "My Example Document (Admin\'s View)" %}
 
 {%
     set nav_data = {
         "1": {
-            "label": "Test One",
+            "label": "Test 01",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-one/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
-            "label": "Test Two",
+            "label": "Test 02",
             "class": "is-active",
-            "href": "/app/app.php/playground/workflow-comments-two/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
-            "label": "Test Three",
+            "label": "Test 03",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-three/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
             "icon": "folder"
         },
+        "4": {
+            "label": "Test 04",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
+            "icon": "folder"
+        }
+    }
+%}
+
+{%
+    set flash_message = {
+        message: 'This content has been published to your website ' ~ html.button({ 'label' : 'View Live', 'class': 'btn--small btn--outline btn--white' }),
+        type: 'success'
     }
 %}
 
 {% set tab %}
-    {% include 'playground/workflow-comments-two/tab_reject.html.twig' %}
+    {% include 'playground/workflow-comments/test-02/tab_publish.html.twig' %}
 {% endset %}
 
 {%
