--- a/views/playground/workflow-comments/test-03/index.html.twig
+++ b/views/playground/workflow-comments/test-03/index.html.twig
@@ -14,34 +14,40 @@
         "1": {
             "label": "Test One",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-one/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
             "label": "Test Two",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-two/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
             "label": "Test Three",
             "class": "is-active",
-            "href": "/app/app.php/playground/workflow-comments-three/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
             "icon": "folder"
         },
+        "4": {
+            "label": "Test 04",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
+            "icon": "folder"
+        }
     }
 %}
 
-{% set tab_two %}
-    {% include 'playground/workflow-comments-three/tab_approve.html.twig' %}
+{% set tab_one %}
+    {% include 'playground/workflow-comments/test-03/tab_one.html.twig' %}
 {% endset %}
 
 {%
     set tabs_content = [
         {
-          "id"    : "two",
+          "id"    : "one",
           "label" : "Content",
-          "src"   : tab_two,
+          "src"   : tab_one,
           "active": true
         }
     ]
