--- a/views/playground/workflow-comments/test-03/index_publish.html.twig
+++ b/views/playground/workflow-comments/test-03/index_publish.html.twig
@@ -14,33 +14,39 @@
         "1": {
             "label": "Test One",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-one/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
             "label": "Test Two",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-two/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
             "label": "Test Three",
             "class": "is-active",
-            "href": "/app/app.php/playground/workflow-comments-three/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
             "icon": "folder"
         },
+        "4": {
+            "label": "Test 04",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
+            "icon": "folder"
+        }
     }
 %}
 
-{% 
+{%
     set flash_message = {
         message: 'This content has been published to your website ' ~ html.button({ 'label' : 'View Live', 'class': 'btn--small btn--outline btn--white' }),
         type: 'success'
-    } 
+    }
 %}
 
 {% set tab %}
-    {% include 'playground/workflow-comments-three/tab_publish.html.twig' %}
+    {% include 'playground/workflow-comments/test-03/tab_publish.html.twig' %}
 {% endset %}
 
 {%
