--- a/views/playground/workflow-comments/test-03/index_reject.html.twig
+++ b/views/playground/workflow-comments/test-03/index_reject.html.twig
@@ -13,35 +13,41 @@
     set nav_data = {
         "1": {
             "label": "Test One",
-            "class": "is-active",
-            "href": "/app/app.php/playground/workflow-comments-one/index.html.twig",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
             "label": "Test Two",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-two/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
             "label": "Test Three",
-            "class": "",
-            "href": "/app/app.php/playground/workflow-comments-three/index.html.twig",
+            "class": "is-active",
+            "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
             "icon": "folder"
         },
+        "4": {
+            "label": "Test 04",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
+            "icon": "folder"
+        }
     }
 %}
 
-{% set tab_two %}
-    {% include 'playground/workflow-comments-one/tab_two.html.twig' %}
+{% set tab %}
+    {% include 'playground/workflow-comments/test-03/tab_reject.html.twig' %}
 {% endset %}
 
 {%
     set tabs_content = [
         {
-          "id"    : "two",
+          "id"    : "tab",
           "label" : "Content",
-          "src"   : tab_two,
+          "src"   : tab,
           "active": true
         }
     ]
