--- a/views/playground/workflow-comments/test-04/index_approve.html.twig
+++ b/views/playground/workflow-comments/test-04/index_approve.html.twig
@@ -7,33 +7,39 @@
 
 {% block title %}{{ parent() }}{% endblock %}
 
-{% set heading = 'My Example Document' %}
+{% set heading = "My Example Document (Admin\'s View)" %}
 
 {%
     set nav_data = {
         "1": {
-            "label": "Test One",
+            "label": "Test 01",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-one/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-01/index.html.twig",
             "icon": "folder"
         },
         "2": {
-            "label": "Test Two",
-            "class": "is-active",
-            "href": "/app/app.php/playground/workflow-comments-two/index.html.twig",
+            "label": "Test 02",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/test-02/index.html.twig",
             "icon": "folder"
         },
         "3": {
-            "label": "Test Three",
+            "label": "Test 03",
             "class": "",
-            "href": "/app/app.php/playground/workflow-comments-three/index.html.twig",
+            "href": "/app/app.php/playground/workflow-comments/test-03/index.html.twig",
             "icon": "folder"
         },
+        "4": {
+            "label": "Test 04",
+            "class": "is-active",
+            "href": "/app/app.php/playground/workflow-comments/test-04/index.html.twig",
+            "icon": "folder"
+        }
     }
 %}
 
 {% set tab_two %}
-    {% include 'playground/workflow-comments-two/tab_approve.html.twig' %}
+    {% include 'playground/workflow-comments/test-04/tab_approve.html.twig' %}
 {% endset %}
 
 {%
