--- a/views/playground/workflow-comments/test-04/tab_approved.html.twig
+++ b/views/playground/workflow-comments/test-04/tab_approved.html.twig
@@ -19,9 +19,9 @@
                         'icon': 'save'
                     },
                     {
-                        'label': 'Publish',
-                        'href': 'index_publish.html.twig',
-                        'icon': 'check-circle'
+                        'label': 'Submit for approval',
+                        'href': 'index.html.twig',
+                        'icon': 'hand-o-right',
                     }
                 ],
                 [
@@ -62,43 +62,61 @@
 {%- endblock -%}
 
 {%- block actions_right -%}
+    <div data-toggle="tooltips" title="There are no new changes to approve">
+        {{
+            html.button({
+                'label': 'Submit for Approval',
+                'disabled': true,
+                'type': 'link',
+                'href': '#workflow-submit'
+            })
+        }}
+    </div>
     {{
         html.button({
             'label': 'Save',
-            'class': ''
+            'class': 'btn--primary'
         })
     }}
-    {{
-        html.button({
-            'label': 'Publish',
-            'class': 'btn--success',
-            'type': 'link',
-            'href': 'index_publish.html.twig'
-        })
-    }}
-
 {%- endblock -%}
 
 {% block tab_content %}
-<style>
+    <style>
         [method="POST"] .form__group {
             background-color: #efefef;
             margin-bottom: 1px;
             padding: 5px;
         }
     </style>
-    {% if _get.note is defined and _get.note is not empty %}
-        {% set note = '<p class="panel--callout"><strong>Notes to author</strong>: <q>' ~ _get.note ~ '</q></p>' %}
-    {% endif %}
-    {{
-        html.panel({
-            'title': '<strong>Admin McAdminface</strong> has approved this content',
-            'body': '<p>It can now be published to the website.</p>' ~ note|default,
-            'icon': 'thumbs-o-up',
-            'class': 'panel--primary u-margin-top-none'
-        })
-    }}
-    
+
+
+    <div class="progress-list">
+
+        <a href="#" class="progress-list__item progress-list__item--current">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 1</span>
+                Draft
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+        <a href="#" class="progress-list__item">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 2</span>
+                Submitted
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+        <a href="#" class="progress-list__item">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 3</span>
+                Approved
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+    </div>
     {{
         form.create()
     }}
@@ -160,15 +178,8 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
     {{
         form.end({
             'actions': [
-                html.button({
-                    'label': 'Publish',
-                    'class': 'btn--success',
-                    'data-toggle': 'modal',
-                    'type': 'link',
-                    'href': '#workflow-submit'
-                }),
                 form.submit({
-                    'class': '',
+                    'class': 'btn--primary',
                     'label': 'Save'
                 }),
                 html.button({
@@ -180,53 +191,5 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
             ]
         })
     }}
-
-    <div id="workflow-submit" class="modal modal__large">
-        <div class="modal__dialog">
-            {{
-                form.create({
-                    'method': 'GET',
-                    'id': 'submit-approve',
-                    'name': 'submit-approve',
-                    'action': 'index.html.twig'
-                })
-            }}
-            <div class="modal__content">
-                <div class="modal__header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h1 class="modal__title">Submit for Approval</h1>
-                </div>
-                <div class="modal__body">
-                    <p>Before your content can be published a managing editor must review and approve it.</p>
-                    <p>You can provide useful notes here to aid their decision. You will be notified if your content has been approved or rejected.</p>
-                    {{
-                        form.textarea({
-                            'label': 'Note to reviewer (optional)',
-                            'id': 'note',
-                            'name': 'note',
-                            'class': 'form__group--full form__group--top form__group--flush u-margin-bottom-none',
-                            'rows': 5
-                        })
-                    }}
-                </div>
-                <div class="modal__footer">
-                        {{
-                            html.button({
-                                'class': 'btn--primary',
-                                'label': 'Submit for Approval',
-                                'type': 'submit',
-                            })
-                        }}
-                        {{
-                            html.button({
-                                'class': 'btn--naked',
-                                'data-dismiss': 'modal',
-                                'label': 'Cancel'
-                            })
-                        }}
-                </div>
-            </div><!-- /.modal__content -->
-        </div><!-- /.modal__dialog -->
-    </div><!-- /.modal -->    
 
 {% endblock %}
